# sphragis

./: Cargo.toml  LICENSE  NOTICE  README.md  about.toml  sphragis.json5
.github/workflows/: release.yml
docs/: advanced-usage.md
src/: commands.rs  config.rs  crypto.rs  initialization.rs  main.rs  string_codec.rs
src/io/: mod.rs  stream_io.rs  terminal_io.rs
