[package]
name = "sphragis"
authors = ["Auryn Sinclair <aurynsinclair@gmail.com>"]
version = "0.9.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
# cryptography
argon2 = "0.5"
rand_core = {version = "0.9", features = ["os_rng"] }

# security
zeroize = "1.8"

# encoding/decoding
hex = "0.4"
base64 = "0.22"

# config
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }

# terminal ui
atty = "0.2"
crossterm = "0.29"
indicatif = "0.17"

## misc
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
